Mobile Sidebar fix some alignments
fix alignment for
- wrap
- aligntoolbar

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -31,6 +31,17 @@ span#main-menu-btn-icon {
 #fontnamecombobox {
 	padding-right: 0px;
 }
+#fontheight {
+	display: none;
+}
+
+#style {
+	display: flex;
+}
+
+#fontsizecombobox {
+	width: 100%;
+}
 
 .ui-header.level-1.mobile-wizard.ui-widget img[src='images/lc_downloadas-pdf.svg']{
 	visibility: visible;
@@ -668,10 +679,16 @@ a.leaflet-control-zoom-in {
 #mobile-wizard #SendToBack > span, #mobile-wizard #ObjectBackOne > span, #mobile-wizard  #ObjectForwardOne > span, #mobile-wizard #BringToFront > span, #mobile-wizard #SetObjectToBackground > span, #mobile-wizard #SetObjectToForeground > #mobile-wizard span, #mobile-wizard #FlipVertical > span, #mobile-wizard #FlipHorizontal > span, #mobile-wizard #Bold > span, #mobile-wizard #Italic > span, #mobile-wizard #Underline > span, #mobile-wizard #Strikeout > span, #mobile-wizard #StyleApply > span, #mobile-wizard #StyleUpdateByExample > span, #mobile-wizard #StyleNewByExample > span, #mobile-wizard #Shadowed > span, #mobile-wizard #Grow > span, #mobile-wizard #Shrink > span, #mobile-wizard #Color > span, #mobile-wizard #Spacing > span, #mobile-wizard #SuperScript > span, #mobile-wizard #SubScript > span, #mobile-wizard #AlignLeft > span, #mobile-wizard #AlignRight > span, #mobile-wizard #AlignHorizontalCenter > span, #mobile-wizard #AlignBlock > span, #mobile-wizard #ParaLeftToRight > span, #mobile-wizard #ParaRightToLeft > span, #mobile-wizard #AlignTop > span, #mobile-wizard #AlignVCenter > span, #mobile-wizard #AlignBottom > span, #mobile-wizard #IncrementIndent > span, #mobile-wizard #DecrementIndent > span, #mobile-wizard #LeftPara > span, #mobile-wizard #RightPara > span, #mobile-wizard #CenterPara > span, #mobile-wizard #JustifyPara > span, #mobile-wizard #DefaultBullet > span, #mobile-wizard #DefaultNumbering > span, #mobile-wizard #ParaspaceIncrease > span, #mobile-wizard #ParaspaceDecrease > span, #mobile-wizard #LineSpacing > span, #mobile-wizard #HangingIndent > span, #mobile-wizard #CellVertTop > span, #mobile-wizard #CellVertCenter > span, #mobile-wizard #CellVertBottom > span, #mobile-wizard div[id*='Table'] > span, #mobile-wizard div[id*='Row'] > span,  #mobile-wizard div[id*='Column'] > span, #mobile-wizard div[id*='Cell'] > span, #mobile-wizard div[id^='Outline'] > span, #mobile-wizard #nolines > img, #mobile-wizard #SetObjectToForeground > span, .aligntoolbar {
 	display: none !important;
 }
-#mobile-wizard #SendToBack, #mobile-wizard #ObjectBackOne, #mobile-wizard #ObjectForwardOne, #mobile-wizard #BringToFront, #mobile-wizard #SetObjectToBackground, #mobile-wizard #SetObjectToForeground, #mobile-wizard #FlipVertical, #mobile-wizard #FlipHorizontal, #mobile-wizard #Bold, #mobile-wizard #Italic, #mobile-wizard #Underline, #mobile-wizard #Strikeout, #mobile-wizard #StyleApply, #mobile-wizard #StyleUpdateByExample, #mobile-wizard #StyleNewByExample, #mobile-wizard #Shadowed, #mobile-wizard #Grow, #mobile-wizard #Shrink, #mobile-wizard #Spacing, #mobile-wizard #SuperScript, #mobile-wizard #SubScript, #mobile-wizard #AlignLeft, #mobile-wizard #AlignRight, #mobile-wizard #AlignHorizontalCenter, #mobile-wizard #AlignBlock, #mobile-wizard #ParaRightToLeft, #mobile-wizard #ParaLeftToRight, #mobile-wizard #AlignTop, #mobile-wizard #AlignVCenter, #mobile-wizard #AlignBottom, #mobile-wizard #IncrementIndent, #mobile-wizard #DecrementIndent, #mobile-wizard #LeftPara, #mobile-wizard #RightPara, #mobile-wizard #CenterPara, #mobile-wizard #JustifyPara, #mobile-wizard #DefaultBullet, #mobile-wizard #DefaultNumbering, #mobile-wizard #ParaspaceIncrease, #mobile-wizard #ParaspaceDecrease, #mobile-wizard #LineSpacing, #mobile-wizard #HangingIndent, #mobile-wizard #CellVertTop, #mobile-wizard #CellVertCenter, #mobile-wizard #CellVertBottom, #mobile-wizard div[id*='Row'], #mobile-wizard div[id*='Column'], #mobile-wizard #DeleteTable, #mobile-wizard #MergeCells, #mobile-wizard div[id^='Outline'], #mobile-wizard #EntireCell, #mobile-wizard #SelectTable, #mobile-wizard #EntireColumn, #mobile-wizard #EntireRow, #mobile-wizard #SplitCell, #mobile-wizard #SplitTable, .aligntoolbar, .unospan-borderstyle, #mobile-wizard .unospan-numberformat {
+.unotoolbutton.mobile-wizard.ui-content.unospan-wrapoptions.has-label, #aligntoolbar, #aligntoolbar2, #mobile-wizard #SendToBack, #mobile-wizard #ObjectBackOne, #mobile-wizard #ObjectForwardOne, #mobile-wizard #BringToFront, #mobile-wizard #SetObjectToBackground, #mobile-wizard #SetObjectToForeground, #mobile-wizard #FlipVertical, #mobile-wizard #FlipHorizontal, #mobile-wizard #Bold, #mobile-wizard #Italic, #mobile-wizard #Underline, #mobile-wizard #Strikeout, #mobile-wizard #StyleApply, #mobile-wizard #StyleUpdateByExample, #mobile-wizard #StyleNewByExample, #mobile-wizard #Shadowed, #mobile-wizard #Grow, #mobile-wizard #Shrink, #mobile-wizard #Spacing, #mobile-wizard #SuperScript, #mobile-wizard #SubScript, #mobile-wizard #AlignLeft, #mobile-wizard #AlignRight, #mobile-wizard #AlignHorizontalCenter, #mobile-wizard #AlignBlock, #mobile-wizard #ParaRightToLeft, #mobile-wizard #ParaLeftToRight, #mobile-wizard #AlignTop, #mobile-wizard #AlignVCenter, #mobile-wizard #AlignBottom, #mobile-wizard #IncrementIndent, #mobile-wizard #DecrementIndent, #mobile-wizard #LeftPara, #mobile-wizard #RightPara, #mobile-wizard #CenterPara, #mobile-wizard #JustifyPara, #mobile-wizard #DefaultBullet, #mobile-wizard #DefaultNumbering, #mobile-wizard #ParaspaceIncrease, #mobile-wizard #ParaspaceDecrease, #mobile-wizard #LineSpacing, #mobile-wizard #HangingIndent, #mobile-wizard #CellVertTop, #mobile-wizard #CellVertCenter, #mobile-wizard #CellVertBottom, #mobile-wizard div[id*='Row'], #mobile-wizard div[id*='Column'], #mobile-wizard #DeleteTable, #mobile-wizard #MergeCells, #mobile-wizard div[id^='Outline'], #mobile-wizard #EntireCell, #mobile-wizard #SelectTable, #mobile-wizard #EntireColumn, #mobile-wizard #EntireRow, #mobile-wizard #SplitCell, #mobile-wizard #SplitTable, .aligntoolbar, .unospan-borderstyle, #mobile-wizard .unospan-numberformat {
 	padding: 4% !important;
 	margin: 0px !important;
 	float: left;
+}
+.unotoolbutton.mobile-wizard.ui-content.unospan-wrapoptions.has-label, #aligntoolbar, #aligntoolbar2 {
+	text-align: center;
+}
+#aligntoolbar span, #aligntoolbar2 span {
+	visibility: hidden;
 }
 #MergeCells > span{
 	color: rgb(var(--blue1-txt-primary-color));
